--- a/client/style.css
+++ b/client/style.css
@@ -129,6 +129,18 @@ body.active
   border: .1px solid #4d4d4f;
 }
 
+.header .navbar .Previous
+{
+  margin: 1.7rem auto;
+  padding: 1rem 7rem;
+  font-size: 1.4rem;
+  border-radius: 5px;
+  color: var(--black);
+  align-items: center;
+  background: var(--bg-color);
+  border: .1px solid #4d4d4f;
+}
+
 #menu-btn 
 {
   color: white;
