--- a/client/style.css
+++ b/client/style.css
@@ -538,12 +538,13 @@ form img:hover {
   .head-menu
   {
     background: var(--bg-color);
-    border-bottom: .5px solid var(--menu-btn);
     position: fixed;
     top: 0;
     left: 0;
+    border-radius: 0 0 10px 10px;
     width: 100%;
-    height: 45px;
+    align-items: center;
+    height: 50px;
     display: block;
   }
 
@@ -555,7 +556,7 @@ form img:hover {
   {
     color: #fff;
     position: fixed;
-    top: 12px;
+    top: 14px;
     left: 12px;
     font-size: 2rem;
     cursor: pointer;
